Closed Bug 555208 Opened 16 years ago Closed 16 years ago

[OOP] fix ordering of NP_Initialize and NP_GetEntryPoints calls for Mac OS X

Categories

(Core Graveyard :: Plug-ins, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
On Mac OS X we need to call NP_Initialize and then NP_GetEntryPoints, which is the opposite of what we do on Windows. The incorrect order causes Flash 10.1 to fail to load.
Attachment #435180 - Flags: review?(benjamin)
Attachment #435180 - Flags: review?(benjamin) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: