[OOPP] Fix ordering of NP_Initialize and NP_GetEntryPoints calls for Mac OS X. The incorrect order causes Flash 10.1 to fail to load. b=555208 r=bsmedberg